[package]
name = "file-trailer"
description = "file log trailer push on amqp"
license = "MIT"
version = "0.1.0"
edition = "2018"

[lib]
name = "file_trailer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = { git = "https://github.com/dizda/logwatcher", branch = "feat-pos" }
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.51"
chrono = "0.4.19"
thiserror = "1.0.29"
amqp-lapin-helper = "0.1"
clap = "3.0.0-beta.4"