[package]
name = "log-bouncer"
description = "tail log and push new lines on amqp (a la logstash)"
authors = ["Jonathan Dizdarevic <dizda@dizda.fr>"]
license = "MIT"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/dizda/log-bouncer"
homepage = "https://github.com/dizda/log-bouncer"
categories = ["asynchronous", "network-programming", "command-line-utilities", "filesystem", "parsing", "text-processing"]
keywords = ["io", "file", "amqp", "log", "tail"]

[lib]
name = "log_bouncer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logwatcher = { git = "https://github.com/dizda/logwatcher", branch = "feat-pos" }
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.51"
chrono = "0.4.19"
thiserror = "1.0.29"
amqp-lapin-helper = "0.1.1"
clap = "3.0.0-beta.4"
crc = "2.0.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }
