[package]
name = "log-bouncer"
description = "tail log and push new lines on amqp (a la logstash)"
authors = ["Jonathan Dizdarevic <dizda@dizda.fr>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dizda/log-bouncer"
homepage = "https://github.com/dizda/log-bouncer"
categories = ["asynchronous", "network-programming", "command-line-utilities", "filesystem", "parsing", "text-processing"]
keywords = ["io", "file", "amqp", "log", "tail"]

[lib]
name = "log_bouncer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter", "json"] }
async-trait = "0.1.52"
chrono = "0.4.19"
thiserror = "1.0.30"
amqp-lapin-helper = "0.2.2"
clap = "3.0.0-beta.4"
crc = "2.1.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
